# Neptune

./: .gitignore  CMakeLists.txt  README.md
cmake/: neptuneConfig.cmake.in
examples/cli/: CMakeLists.txt
examples/cli/src/: main.cpp
examples/xor/: CMakeLists.txt
examples/xor/src/: main.cpp
include/: hello.hpp  neptune.hpp
include/hello/: greeting.hpp
include/neptune/: matops.hpp  matrix.hpp  nn.hpp
test/: test.cpp
